--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,16 +3,18 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 import BaseHead from '../components/BaseHead.astro';
-const { pageTitle } = Astro.props;
+import { ViewTransitions } from 'astro:transitions';
+const { pageTitle, image } = Astro.props;
 ---
 
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
-    <BaseHead title={pageTitle} />
+    <BaseHead title={pageTitle} image={image} />
+    <ViewTransitions />
   </head>
-  <body class="bg-white dark:bg-slate-900">
+  <body class="bg-white dark:bg-slate-900 flex flex-col h-full">
     <Header />
-    <main class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto text-gray-800 dark:text-gray-200">
+    <main class="text-gray-800 dark:text-gray-200">
       <slot />
     </main>
     <Footer />
