--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -9,22 +9,20 @@ type Props = CollectionEntry<'blog'>['data'];
 const { title, description, pubDate, image, tags } = Astro.props;
 ---
 
-<BaseLayout pageTitle={title} description={description}>
-  <main>
-    <article>
+<BaseLayout pageTitle={title} description={description} image={image.url}>
+  <article class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
+    <div>
+      <img class="w-full object-cover rounded-xl mb-10" width={1020} height={510} src={image.url} alt={image.alt} />
+    </div>
+    <div>
       <div>
-        <img class="w-full object-cover rounded-xl mb-10" width={1020} height={510} src={image.url} alt={image.alt} />
+        <p class="text-xs sm:text-sm">{formatDate(pubDate)}</p>
+        <h2 class="text-2xl font-bold md:text-3xl">{title}</h2>
       </div>
-      <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 mx-auto">
-        <div>
-          <p class="text-xs sm:text-sm">{formatDate(pubDate)}</p>
-          <h2 class="text-2xl font-bold md:text-3xl">{title}</h2>
-        </div>
-        <div class="max-w-2xl prose">
-          <slot />
-          <PostTags tags={tags} />
-        </div>
+      <div class="prose">
+        <slot />
+        <PostTags tags={tags} />
       </div>
-    </article>
-  </main>
+    </div>
+  </article>
 </BaseLayout>
