--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,7 @@ import { TWITTER_LINK, GITHUB_LINK, LINKEDIN_LINK } from '../consts';
     <!-- End Col -->
 
     <div class="mt-3">
-      <p class="text-gray-500">Built with Astro and Tailwind.</p>
+      <p class="text-gray-500">Built with Astro and Tailwind. Hosted on Vercel.</p>
       <p class="text-gray-500">&copy; Vladislav Guleaev {today.getFullYear()}. All rights reserved.</p>
     </div>
 
