--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -20,13 +20,15 @@ const pageDescription = description || SITE_DESCRIPTION;
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+<link rel="icon" type="image/x-icon" href="/favicon.ico" />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
 <title>{pageTitle}</title>
 <meta name="title" content={pageTitle} />
 <meta name="description" content={pageDescription} />
+<meta name="author" content="Vladislav Guleaev" />
+<meta name="keywords" content="Vladislav Guleaev, Vlad Guleaev, vguleaev, blog" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
