--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,12 @@
 ---
 import HeaderLink from './HeaderLink.astro';
-import { GITHUB_LINK, SITE_TITLE, TWITTER_LINK } from '../consts';
+import { GITHUB_LINK, LINKEDIN_LINK, SITE_TITLE, TWITTER_LINK } from '../consts';
 import ThemeSwitcher from './ThemeSwitcher.astro';
 ---
 
 <header class="bg-white dark:bg-slate-900 text-gray-800 dark:text-gray-200">
   <nav>
-    <h2 class="site-title text-xl"><a href="/">{SITE_TITLE}</a></h2>
+    <h2 class="hidden md:block text-xl"><a href="/">{SITE_TITLE}</a></h2>
     <div class="internal-links">
       <HeaderLink class="w-[70px] text-center" href="/blog">Blog</HeaderLink>
       <HeaderLink class="w-[70px] text-center" href="/tags">Tags</HeaderLink>
@@ -14,25 +14,43 @@ import ThemeSwitcher from './ThemeSwitcher.astro';
     </div>
     <div class="social-links flex just-center items-center gap-4 pb-3">
       <ThemeSwitcher />
-      <a class="header-link" href={TWITTER_LINK} target="_blank">
-        <svg viewBox="0 0 16 16" aria-hidden="true" width="20" height="20"
-          ><path
-            fill="currentColor"
-            d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"
+      <a
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        href={GITHUB_LINK}
+        target="_blank">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M12 2C6.475 2 2 6.588 2 12.253c0 4.537 2.862 8.369 6.838 9.727.5.09.687-.218.687-.487 0-.243-.013-1.05-.013-1.91C7 20.059 6.35 18.957 6.15 18.38c-.113-.295-.6-1.205-1.025-1.448-.35-.192-.85-.667-.013-.68.788-.012 1.35.744 1.538 1.051.9 1.551 2.338 1.116 2.912.846.088-.666.35-1.115.638-1.371-2.225-.256-4.55-1.14-4.55-5.062 0-1.115.387-2.038 1.025-2.756-.1-.256-.45-1.307.1-2.717 0 0 .837-.269 2.75 1.051.8-.23 1.65-.346 2.5-.346.85 0 1.7.115 2.5.346 1.912-1.333 2.75-1.05 2.75-1.05.55 1.409.2 2.46.1 2.716.637.718 1.025 1.628 1.025 2.756 0 3.934-2.337 4.806-4.562 5.062.362.32.675.936.675 1.897 0 1.371-.013 2.473-.013 2.82 0 .268.188.589.688.486a10.039 10.039 0 0 0 4.932-3.74A10.447 10.447 0 0 0 22 12.253C22 6.588 17.525 2 12 2Z"
           ></path></svg
         >
       </a>
-      <a class="header-link" href={GITHUB_LINK} target="_blank">
-        <svg viewBox="0 0 16 16" aria-hidden="true" width="20" height="20"
+
+      <a
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        href={TWITTER_LINK}
+        target="_blank">
+        <svg viewBox="0 0 24 24" aria-hidden="true"
           ><path
-            fill="currentColor"
-            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
+            d="M20.055 7.983c.011.174.011.347.011.523 0 5.338-3.92 11.494-11.09 11.494v-.003A10.755 10.755 0 0 1 3 18.186c.308.038.618.057.928.058a7.655 7.655 0 0 0 4.841-1.733c-1.668-.032-3.13-1.16-3.642-2.805a3.753 3.753 0 0 0 1.76-.07C5.07 13.256 3.76 11.6 3.76 9.676v-.05a3.77 3.77 0 0 0 1.77.505C3.816 8.945 3.288 6.583 4.322 4.737c1.98 2.524 4.9 4.058 8.034 4.22a4.137 4.137 0 0 1 1.128-3.86A3.807 3.807 0 0 1 19 5.274a7.657 7.657 0 0 0 2.475-.98c-.29.934-.9 1.729-1.713 2.233A7.54 7.54 0 0 0 22 5.89a8.084 8.084 0 0 1-1.945 2.093Z"
+          ></path></svg
+        >
+      </a>
+      <a
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        href={LINKEDIN_LINK}
+        target="_blank">
+        <svg viewBox="0 0 24 24" aria-hidden="true">
+          <path
+            d="M18.335 18.339H15.67v-4.177c0-.996-.02-2.278-1.39-2.278-1.389 0-1.601 1.084-1.601 2.205v4.25h-2.666V9.75h2.56v1.17h.035c.358-.674 1.228-1.387 2.528-1.387 2.7 0 3.2 1.778 3.2 4.091v4.715zM7.003 8.575a1.546 1.546 0 01-1.548-1.549 1.548 1.548 0 111.547 1.549zm1.336 9.764H5.666V9.75H8.34v8.589zM19.67 3H4.329C3.593 3 3 3.58 3 4.297v15.406C3 20.42 3.594 21 4.328 21h15.338C20.4 21 21 20.42 21 19.703V4.297C21 3.58 20.4 3 19.666 3h.003z"
           ></path></svg
         >
       </a>
     </div>
   </nav>
 </header>
+
 <style>
   header {
     margin: 0;
@@ -65,13 +83,5 @@ import ThemeSwitcher from './ThemeSwitcher.astro';
   .internal-links a.active {
     text-decoration: none;
     border-bottom-color: var(--accent);
-  }
-  @media (max-width: 720px) {
-    .header-link {
-      display: none;
-    }
-    .site-title {
-      display: none;
-    }
   }
 </style>
