--- a/src/components/ThemeSwitcher.astro
+++ b/src/components/ThemeSwitcher.astro
@@ -3,7 +3,7 @@
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 20 20"
     fill="currentColor"
-    class="text-gray-900 dark:text-gray-100 h-[21px] w-[21px]">
+    class="text-gray-900 dark:fill-zinc-100 w-6 h-6 hover:fill-zinc-400">
     <path
       class="sun hidden"
       fill-rule="evenodd"
