--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,52 +5,32 @@ const pageTitle = 'About Me';
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-      magna aliqua. Vitae ultricies leo integer malesuada nunc vel risus commodo viverra. Adipiscing enim eu turpis
-      egestas pretium. Euismod elementum nisi quis eleifend quam adipiscing. In hac habitasse platea dictumst
-      vestibulum. Sagittis purus sit amet volutpat. Netus et malesuada fames ac turpis egestas. Eget magna fermentum
-      iaculis eu non diam phasellus vestibulum lorem. Varius sit amet mattis vulputate enim. Habitasse platea dictumst
-      quisque sagittis. Integer quis auctor elit sed vulputate mi. Dictumst quisque sagittis purus sit amet.
+    <img
+      class="inline-block h-40 w-40 rounded-full ring-2 ring-white dark:ring-gray-800 mb-8"
+      src="/images/avatar.jpeg"
+      alt="Image Description"
+    />
+    <h1 class="text-2xl mb-5">Hello 👋, my name is Vladislav Guleaev!</h1>
+
+    <p class="text-md mb-2">I am Full-stack Web Developer living in Munich, Germany.</p>
+    <p class="text-md mb-2">
+      I believe that I am passionate and motivated IT professional with good knowledge in both frontend and backend
+      technologies and frameworks. Development in a healthy and friendly atmosphere is always important for me. I am a
+      big fan of IT events, such as tech talks, hackathons, meetups and conferences.
     </p>
 
-    <p>
-      Morbi tristique senectus et netus. Id semper risus in hendrerit gravida rutrum quisque non tellus. Habitasse
-      platea dictumst quisque sagittis purus sit amet. Tellus molestie nunc non blandit massa. Cursus vitae congue
-      mauris rhoncus. Accumsan tortor posuere ac ut. Fringilla urna porttitor rhoncus dolor. Elit ullamcorper dignissim
-      cras tincidunt lobortis. In cursus turpis massa tincidunt dui ut ornare lectus. Integer feugiat scelerisque varius
-      morbi enim nunc. Bibendum neque egestas congue quisque egestas diam. Cras ornare arcu dui vivamus arcu felis
-      bibendum. Dignissim suspendisse in est ante in nibh mauris. Sed tempus urna et pharetra pharetra massa massa
-      ultricies mi.
+    <p class="text-md mb-2">
+      Currently working as Full-stack Javascript developer I am primary focused in such technologies:
     </p>
+    <ul class="text-md mb-2 list-disc ml-5 font-bold">
+      <li>Nextjs</li>
+      <li>React</li>
+      <li>Nodejs</li>
+      <li>Typescript</li>
+      <li>MongoDB</li>
+      <li>Docker</li>
+    </ul>
 
-    <p>
-      Mollis nunc sed id semper risus in. Convallis a cras semper auctor neque. Diam sit amet nisl suscipit. Lacus
-      viverra vitae congue eu consequat ac felis donec. Egestas integer eget aliquet nibh praesent tristique magna sit
-      amet. Eget magna fermentum iaculis eu non diam. In vitae turpis massa sed elementum. Tristique et egestas quis
-      ipsum suspendisse ultrices. Eget lorem dolor sed viverra ipsum. Vel turpis nunc eget lorem dolor sed viverra.
-      Posuere ac ut consequat semper viverra nam. Laoreet suspendisse interdum consectetur libero id faucibus. Diam
-      phasellus vestibulum lorem sed risus ultricies tristique. Rhoncus dolor purus non enim praesent elementum
-      facilisis. Ultrices tincidunt arcu non sodales neque. Tempus egestas sed sed risus pretium quam vulputate. Viverra
-      suspendisse potenti nullam ac tortor vitae purus faucibus ornare. Fringilla urna porttitor rhoncus dolor purus
-      non. Amet dictum sit amet justo donec enim.
-    </p>
-
-    <p>
-      Mattis ullamcorper velit sed ullamcorper morbi tincidunt. Tortor posuere ac ut consequat semper viverra. Tellus
-      mauris a diam maecenas sed enim ut sem viverra. Venenatis urna cursus eget nunc scelerisque viverra mauris in.
-      Arcu ac tortor dignissim convallis aenean et tortor at. Curabitur gravida arcu ac tortor dignissim convallis
-      aenean et tortor. Egestas tellus rutrum tellus pellentesque eu. Fusce ut placerat orci nulla pellentesque
-      dignissim enim sit amet. Ut enim blandit volutpat maecenas volutpat blandit aliquam etiam. Id donec ultrices
-      tincidunt arcu. Id cursus metus aliquam eleifend mi.
-    </p>
-
-    <p>
-      Tempus quam pellentesque nec nam aliquam sem. Risus at ultrices mi tempus imperdiet. Id porta nibh venenatis cras
-      sed felis eget velit. Ipsum a arcu cursus vitae. Facilisis magna etiam tempor orci eu lobortis elementum.
-      Tincidunt dui ut ornare lectus sit. Quisque non tellus orci ac. Blandit libero volutpat sed cras. Nec tincidunt
-      praesent semper feugiat nibh sed pulvinar proin gravida. Egestas integer eget aliquet nibh praesent tristique
-      magna.
-    </p>
+    <p class="text-md mb-2">Get in touch with me via social links and we can have a chat about anything you want! 🚀</p>
   </div>
 </BaseLayout>
