--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,6 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BaseLayout from '../../layouts/BaseLayout.astro';
+import BlogPost from '../../components/BlogPost.astro';
 
 export async function getStaticPaths() {
   const allPosts = await getCollection('blog');
@@ -8,9 +9,10 @@ export async function getStaticPaths() {
 
   return uniqueTags.map((tag) => {
     const filteredPosts = allPosts.filter((post) => post.data.tags.includes(tag));
+    const sortedPosts = filteredPosts.sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
     return {
       params: { tag },
-      props: { posts: filteredPosts },
+      props: { posts: sortedPosts },
     };
   });
 }
@@ -20,17 +22,19 @@ type Props = {
 
 const { tag } = Astro.params;
 const { posts } = Astro.props;
+const pageTitle = `Posts with tag: ${tag}`;
 ---
 
-<BaseLayout pageTitle={tag}>
-  <h1>Posts with tag: {tag}</h1>
-  <ul>
-    {
-      posts.map((post) => (
-        <li>
-          <a href={`/blog/${post.slug}/`}>{post.data.title}</a>
-        </li>
-      ))
-    }
-  </ul>
+<BaseLayout pageTitle={pageTitle}>
+  <div class="flex justify-center">
+    <div class="max-w-3xl px-4 py-10 sm:px-6 lg:px-8 lg:py-14">
+      <div class="max-w-2xl mx-auto text-center mb-10 lg:mb-14">
+        <h2 class="text-2xl font-bold md:text-4xl md:leading-tight dark:text-white">Tag: {tag}</h2>
+      </div>
+
+      <div class="flex flex-col flex-wrap gap-10">
+        {posts.map((post) => <BlogPost post={post} />)}
+      </div>
+    </div>
+  </div>
 </BaseLayout>
