--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,14 +1,18 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+import { Image } from 'astro:assets';
+import AvatarImage from '../images/avatar.jpeg';
 const pageTitle = 'About Me';
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
-    <img
-      class="inline-block h-40 w-40 rounded-full ring-2 ring-white dark:ring-gray-800 mb-8"
-      src="/images/avatar.jpeg"
-      alt="Image Description"
+    <Image
+      class="inline-block rounded-full ring-2 ring-white dark:ring-gray-800 mb-8"
+      src={AvatarImage}
+      alt="Author photo"
+      width={160}
+      height={160}
     />
     <h1 class="text-2xl mb-5">Hello 👋, my name is Vladislav Guleaev!</h1>
 
