--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -5,7 +5,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 interface Props {
   title: string;
   description?: string;
-  image?: string;
+  image?: any;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
@@ -38,11 +38,11 @@ const pageDescription = description || SITE_DESCRIPTION;
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image, Astro.url)} />
+<meta property="og:image" content={new URL(image.src, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image, Astro.url)} />
+<meta property="twitter:image" content={new URL(image.src, Astro.url)} />
