Change covers size to support Open Graph

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,16 +1,17 @@
 ---
 import '../styles/global.css';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
+import DefaultImage from '../content/blog/covers/blog-placeholder-1.jpg';
 
 interface Props {
   title: string;
   description?: string;
-  image?: any;
+  image?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = '/blog-placeholder-1.jpg' } = Astro.props;
+const { title, description, image = DefaultImage.src } = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 
@@ -37,12 +38,12 @@ const pageDescription = description || SITE_DESCRIPTION;
 <meta property="og:type" content="website" />
 <meta property="og:url" content={Astro.url} />
 <meta property="og:title" content={title} />
-<meta property="og:description" content={description} />
-<meta property="og:image" content={new URL(image.src, Astro.url)} />
+<meta property="og:description" content={pageDescription} />
+<meta property="og:image" content={new URL(image, Astro.url)} />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content={Astro.url} />
 <meta property="twitter:title" content={title} />
-<meta property="twitter:description" content={description} />
-<meta property="twitter:image" content={new URL(image.src, Astro.url)} />
+<meta property="twitter:description" content={pageDescription} />
+<meta property="twitter:image" content={new URL(image, Astro.url)} />
