--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -10,10 +10,10 @@ type Props = CollectionEntry<'blog'>['data'];
 const { title, description, pubDate, image, tags } = Astro.props;
 ---
 
-<BaseLayout pageTitle={title} description={description} image={image.url}>
+<BaseLayout pageTitle={title} description={description} image={image}>
   <article class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
     <div>
-      <Image class="w-full object-cover rounded-xl mb-10" width={1020} height={510} src={image.url} alt={image.alt} />
+      <Image class="w-full object-cover rounded-xl mb-10" width={840} height={480} src={image.url} alt={image.alt} />
     </div>
     <div>
       <div>
