--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/global.css';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
-import DefaultImage from '../content/blog/covers/blog-placeholder-1.jpg';
+import DefaultImage from '../content/blog/covers/main-blog-cover.png';
 
 interface Props {
   title: string;
