--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,7 +24,7 @@ const pageTitle = 'About Me';
     </p>
 
     <p class="text-md mb-2">
-      Currently working as Full-stack Javascript developer I am primary focused in such technologies:
+      Currently working as Full-stack Javascript developer I am primarily focused on such technologies:
     </p>
     <ul class="text-md mb-2 list-disc ml-5 font-bold">
       <li>Nextjs</li>
