Add styles for code in p tags from markdown

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,7 +15,7 @@ import ThemeSwitcher from './ThemeSwitcher.astro';
     <div class="social-links flex just-center items-center gap-4 pb-3">
       <ThemeSwitcher />
       <a
-        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 dark:hover:fill-zinc-400 transition w-6 h-6"
         href={GITHUB_LINK}
         target="_blank">
         <svg viewBox="0 0 24 24" aria-hidden="true">
@@ -28,7 +28,7 @@ import ThemeSwitcher from './ThemeSwitcher.astro';
       </a>
 
       <a
-        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 dark:hover:fill-zinc-400 transition w-6 h-6"
         href={TWITTER_LINK}
         target="_blank">
         <svg viewBox="0 0 24 24" aria-hidden="true"
@@ -38,7 +38,7 @@ import ThemeSwitcher from './ThemeSwitcher.astro';
         >
       </a>
       <a
-        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 transition w-6 h-6"
+        class="hidden md:block dark:fill-zinc-100 hover:fill-zinc-400 dark:hover:fill-zinc-400 transition w-6 h-6"
         href={LINKEDIN_LINK}
         target="_blank">
         <svg viewBox="0 0 24 24" aria-hidden="true">
