--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -5,19 +5,34 @@ import BaseLayout from './BaseLayout.astro';
 import PostTags from '../components/PostTags.astro';
 import { Image } from 'astro:assets';
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<'blog'>['data'] & {
+  readingTime: string;
+};
 
-const { title, description, pubDate, image, tags } = Astro.props;
+const { title, description, pubDate, image, tags, readingTime } = Astro.props;
 ---
 
 <BaseLayout pageTitle={title} description={description} image={image}>
-  <article class="max-w-3xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
+  <article class="max-w-4xl px-4 pt-6 lg:pt-10 pb-12 sm:px-6 lg:px-8 md:mx-auto">
     <div>
-      <Image class="w-full object-cover rounded-xl mb-10" width={840} height={480} src={image.url} alt={image.alt} />
+      <Image class="object-cover rounded-xl mb-10" width={840} height={480} src={image.url} alt={image.alt} />
     </div>
     <div>
       <div>
-        <p class="text-xs sm:text-sm">{formatDate(pubDate)}</p>
+        <div class="flex mb-2 items-center text-gray-500 dark:text-gray-400">
+          <p class="text-xs sm:text-sm mr-5">{formatDate(pubDate)}</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="w-4 h-4">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6h4.5m4.5 0a9 9 0 11-18 0 9 9 0 0118 0z"
+            ></path>
+          </svg>
+          <p class="text-xs sm:text-sm ml-1">{readingTime}</p>
+        </div>
         <h2 class="text-2xl font-bold md:text-3xl">{title}</h2>
       </div>
       <div class="prose">
