--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -12,9 +12,14 @@ export async function getStaticPaths() {
 type Props = CollectionEntry<'blog'>;
 
 const post = Astro.props;
-const { Content } = await post.render();
+const { Content, remarkPluginFrontmatter } = await post.render();
+
+const layoutProps = {
+  ...post.data,
+  readingTime: remarkPluginFrontmatter.minutesRead,
+};
 ---
 
-<MarkdownPostLayout {...post.data}>
+<MarkdownPostLayout {...layoutProps}>
   <Content />
 </MarkdownPostLayout>
