--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 import { TWITTER_LINK, GITHUB_LINK, LINKEDIN_LINK } from '../consts';
 ---
 
-<footer class="mt-auto w-full max-w-[85rem] py-8 px-4 sm:px-6 lg:px-8 mx-auto">
+<footer class="mt-auto w-full max-w-[85rem] pt-8 pb-4 px-4 sm:px-6 lg:px-8 mx-auto">
   <div class="text-center">
     <div class="mt-3">
       <p class="text-gray-500">Built with Astro and Tailwind. Hosted on Vercel.</p>
