--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,9 +18,9 @@ const pageTitle = 'About Me';
 
     <p class="text-md mb-2">I am Full-stack Web Developer living in Munich, Germany.</p>
     <p class="text-md mb-2">
-      I believe that I am passionate and motivated IT professional with good knowledge in both frontend and backend
-      technologies and frameworks. Development in a healthy and friendly atmosphere is always important for me. I am a
-      big fan of IT events, such as tech talks, hackathons, meetups and conferences.
+      I believe that I am passionate and motivated IT professional with 7+ years of experience in both frontend and
+      backend technologies and frameworks. Working in a healthy and friendly atmosphere is the most important for me. I
+      am a big fan of IT events, such as tech talks, hackathons, meetups and conferences.
     </p>
 
     <p class="text-md mb-2">
