--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,15 +16,15 @@ const pageTitle = 'About Me';
     />
     <h1 class="text-2xl mb-5">Hello 👋, my name is Vladislav Guleaev!</h1>
 
-    <p class="text-md mb-2">I am Full-stack Web Developer living in Munich, Germany.</p>
+    <p class="text-md mb-2">I am a Full-stack Web Developer living in Munich, Germany.</p>
     <p class="text-md mb-2">
-      I believe that I am passionate and motivated IT professional with 7+ years of experience in both frontend and
-      backend technologies and frameworks. Working in a healthy and friendly atmosphere is the most important for me. I
-      am a big fan of IT events, such as tech talks, hackathons, meetups and conferences.
+      I am a passionate and motivated IT professional with 7+ years of experience in both frontend and backend
+      technologies and frameworks. Working in a healthy and friendly environment is the most important for me. I love to
+      participate in IT events and activities, such as tech talks, hackathons, meetups and conferences.
     </p>
 
     <p class="text-md mb-2">
-      Currently working as Full-stack Javascript developer I am primarily focused on such technologies:
+      Currently working as Full-stack Javascript developer and primarily focused on such technologies:
     </p>
     <ul class="text-md mb-2 list-disc ml-5 font-bold">
       <li>Nextjs</li>
