Add data structures post

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -29,7 +29,7 @@ const pageDescription = description || SITE_DESCRIPTION;
 <meta name="title" content={pageTitle} />
 <meta name="description" content={pageDescription} />
 <meta name="author" content="Vladislav Guleaev" />
-<meta name="keywords" content="Vladislav Guleaev, Vlad Guleaev, vguleaev, blog" />
+<meta name="keywords" content="Vladislav Guleaev, Vladislav Guleaev blog, Vlad Guleaev, vguleaev" />
 
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
