--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -31,6 +31,9 @@ const pageDescription = description || SITE_DESCRIPTION;
 <meta name="author" content="Vladislav Guleaev" />
 <meta name="keywords" content="Vladislav Guleaev, Vladislav Guleaev blog, Vlad Guleaev, vguleaev" />
 
+<link rel="sitemap" href="/sitemap-index.xml" />
+<link rel="alternate" type="application/atom+xml" href="https://vguleaev.dev/rss.xml" title="Blog" />
+
 <!-- Canonical URL -->
 <link rel="canonical" href={canonicalURL} />
 
