Small header css fix

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -16,7 +16,7 @@ import HeaderBurgerButton from './HeaderBurgerButton.astro';
       </a>
     </div>
 
-    <div class="social-links flex items-center gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
+    <div class="social-links flex items-center gap-x-4 md:gap-x-2 ms-auto py-1 md:ps-6 md:order-3 md:col-span-3">
       <ThemeSwitcher />
       <HeaderBurgerButton />
       <a
