--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -36,6 +36,10 @@
   @apply pl-2;
 }
 
+.prose > ul > li > a {
+  @apply text-rose-600 decoration-2 hover:underline font-medium;
+}
+
 .prose > uL > li > code {
   padding: 3px 5px;
   @apply bg-gray-200 dark:bg-gray-800 text-sm text-gray-800 dark:text-gray-200 rounded-md;
