--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ const pageTitle = 'Blog';
       </div>
 
       <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-        {posts.map((post) => <BlogPost post={post} />)}
+        {posts.map((post) => <BlogPost post={post} width={500} height={250} />)}
       </div>
     </div>
   </div>
