Update About page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,9 +18,11 @@ const pageTitle = 'About Me';
 
     <p class="text-md mb-2">I am a Full-stack Web Developer living in Munich, Germany.</p>
     <p class="text-md mb-2">
-      I am a passionate and motivated IT professional with 8+ years of experience in both frontend and backend
-      technologies and frameworks. Working in a healthy and friendly environment is the most important for me. I love to
-      participate in IT events and activities, such as tech talks, hackathons, meetups and conferences.
+      I'm a passionate and motivated IT professional with 8+ years of experience in both frontend and backend
+      technologies and frameworks. Recently, I have developed a keen interest in cloud computing, infrastructure, and
+      system architecture. I am currently focused on taking the Staff+ path in my career, aiming to deepen my expertise
+      and take on more leadership responsibilities. I am passionate about staying engaged in the IT community by
+      participating in events, like tech talks, meetups, and conferences.
     </p>
 
     <p class="text-md mb-2">
