Upgrade Astro to v5

--- a/src/components/HeaderBurgerButton.astro
+++ b/src/components/HeaderBurgerButton.astro
@@ -44,7 +44,7 @@
   </button>
 </div>
 
-<script lang="ts">
+<script lang="ts" is:inline>
   function toggleNavbar() {
     const navbar = document.getElementById('navbar-collapse-with-animation');
     const bugerButtonIcon = document.getElementById('navbar-burger-button-icon');
