--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,7 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 import BaseHead from '../components/BaseHead.astro';
-import { ViewTransitions } from 'astro:transitions';
+import { ClientRouter } from 'astro:transitions';
 
 interface Props {
   pageTitle: string;
@@ -22,7 +22,7 @@ const { pageTitle, image, description } = Astro.props;
 <html lang="en" class="h-full">
   <head>
     <BaseHead title={pageTitle} description={description} image={image?.url.src} />
-    <ViewTransitions />
+    <ClientRouter />
   </head>
   <body class="bg-white dark:bg-neutral-900 flex flex-col h-full">
     <Header />
