--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -18,7 +18,7 @@ const pageTitle = 'About Me';
 
     <p class="text-md mb-2">I am a Full-stack Web Developer living in Munich, Germany.</p>
     <p class="text-md mb-2">
-      I'm a passionate and motivated IT professional with 8+ years of experience in both frontend and backend
+      I'm a passionate and motivated IT professional with 9+ years of experience in both frontend and backend
       technologies and frameworks. Recently, I have developed a keen interest in cloud computing, infrastructure, and
       system architecture. I am currently focused on taking the Staff+ path in my career, aiming to deepen my expertise
       and take on more leadership responsibilities. I am passionate about staying engaged in the IT community by
@@ -35,6 +35,7 @@ const pageTitle = 'About Me';
       <li>Typescript</li>
       <li>MongoDB</li>
       <li>Docker</li>
+      <li>Kubernetes</li>
     </ul>
 
     <p class="text-md mb-2">Get in touch with me via social links and we can have a chat about anything you want! 🚀</p>
