Add projects page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -65,18 +65,26 @@ import HeaderBurgerButton from './HeaderBurgerButton.astro';
             >Blog
           </HeaderLink>
         </div>
-        <div>
-          <HeaderLink
-            class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
-            href="/about"
-            >About
-          </HeaderLink>
-        </div>
+
         <div>
           <HeaderLink
             class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
             href="/tags"
             >Tags
+          </HeaderLink>
+        </div>
+        <div>
+          <HeaderLink
+            class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
+            href="/projects"
+            >Projects
+          </HeaderLink>
+        </div>
+        <div>
+          <HeaderLink
+            class="relative inline-block text-black hover:text-gray-600 dark:text-white dark:hover:text-neutral-300"
+            href="/about"
+            >About
           </HeaderLink>
         </div>
       </div>
