Modify about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -36,6 +36,7 @@ const pageTitle = 'About Me';
       <li>MongoDB</li>
       <li>Docker</li>
       <li>Kubernetes</li>
+      <li>Gitlab</li>
     </ul>
 
     <p class="text-md mb-2">Get in touch with me via social links and we can have a chat about anything you want! 🚀</p>
