--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@ const pageTitle = 'About Me';
     />
     <h1 class="text-2xl mb-5">Hello 👋, my name is Vladislav Guleaev!</h1>
 
-    <p class="text-md mb-2">I am a Full-stack Web Developer living in Munich, Germany.</p>
+    <p class="text-md mb-2">I am a <b>Full-Stack Lead Developer</b> living in Munich, Germany.</p>
     <p class="text-md mb-2">
       I'm a passionate and motivated IT professional with 9+ years of experience in both frontend and backend
       technologies and frameworks. Recently, I have developed a keen interest in cloud computing, infrastructure, and
@@ -25,9 +25,7 @@ const pageTitle = 'About Me';
       participating in events, like tech talks, meetups, and conferences.
     </p>
 
-    <p class="text-md mb-2">
-      Currently working as Full-stack Javascript developer and primarily focused on such technologies:
-    </p>
+    <p class="text-md mb-2">I am currently working with and primarily focusing on the following technologies:</p>
     <ul class="text-md mb-2 list-disc ml-5 font-bold">
       <li>Nextjs</li>
       <li>React</li>
