--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -3,6 +3,7 @@ import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import '../styles/global.css';
 import BaseHead from '../components/BaseHead.astro';
+import SpeedInsights from '@vercel/speed-insights/astro';
 import { ClientRouter } from 'astro:transitions';
 
 interface Props {
@@ -30,5 +31,6 @@ const { pageTitle, image, description } = Astro.props;
       <slot />
     </main>
     <Footer />
+    <SpeedInsights />
   </body>
 </html>
